--- a/services/user/user-service/pom.xml
+++ b/services/user/user-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>user</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>user-service</artifactId>
