refactor: setup tenant context before dispatching mqtt event

--- a/core/message-pub-sub/message-pub-sub-component/pom.xml
+++ b/core/message-pub-sub/message-pub-sub-component/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>base</artifactId>
+            <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
 
