--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -92,6 +92,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
