--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -107,6 +107,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>message-pub-sub-component</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- service -->
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
@@ -187,8 +193,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>message-pub-sub-component</artifactId>
+            <groupId>com.milesight.beaveriot.integrations</groupId>
+            <artifactId>milesight-gateway</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
