feat: Add output nodes and optimize log collection

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -111,6 +111,8 @@ camel:
           title: "email"
         - name: "webhook"
           title: "Webhook"
+        - name: "output"
+          title: "Output Node"
     languages:
       - code:
           - "groovy"
@@ -140,6 +142,7 @@ oauth2:
     - "/user/register"
     - "/user/status"
     - "/public/**"
+    - "/actuator/**"
 
 mqtt:
   broker:
