--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -22,11 +22,17 @@ spring:
     username: "${SPRING_DATASOURCE_USERNAME:sa}"
     password: "${SPRING_DATASOURCE_PASSWORD:}"
     driverClassName: "${SPRING_DRIVER_CLASS_NAME:org.h2.Driver}"
-
   h2:
     console:
       enabled: ${SPRING_H2_CONSOLE_ENABLED:true}
       path: /public/h2-console
+  cache:
+    redis:
+      cache-null-values: true
+      value-serializer-class: org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer
+#      time-to-live: 10m
+  #      time-to-lives:
+  #        ["demo:key:*"]: 100s
   redis:
     ssl: ${REDIS_SSL:false}
     host: ${REDIS_HOST:}
