--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>application</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>application-standard</artifactId>
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>message-pub-sub-component</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
 
         <!-- service -->
@@ -189,13 +189,13 @@
         <dependency>
             <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>msc-integration</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>milesight-gateway</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
 
         <!-- unit test -->
