--- a/extension-components/data-components/data-timeseries/pom.xml
+++ b/extension-components/data-components/data-timeseries/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>extension-components</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
