--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -57,6 +57,8 @@
         <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
         <shedlock.version>6.3.0</shedlock.version>
         <redisson.version>3.44.0</redisson.version>
+        <minio-client.version>8.5.17</minio-client.version>
+        <aws-sdk.version>2.31.14</aws-sdk.version>
 
         <deploy.skip>false</deploy.skip>
     </properties>
