feat: Support cluster deployment (#142)
* feat: Support cluster deployment

* feat: Extended GuavaCache, supports setting TTL time

--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -22,11 +22,23 @@ spring:
     username: "${SPRING_DATASOURCE_USERNAME:sa}"
     password: "${SPRING_DATASOURCE_PASSWORD:}"
     driverClassName: "${SPRING_DRIVER_CLASS_NAME:org.h2.Driver}"
-
   h2:
     console:
       enabled: ${SPRING_H2_CONSOLE_ENABLED:true}
       path: /public/h2-console
+  cache:
+#    type: caffeine
+#    cache-names: "demo:cache1,demo:oss:cache2"
+    caffeine:
+      spec: maximumSize=10000,expireAfterAccess=1m
+    redis:
+      cache-null-values: true
+      value-serializer-class: org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer
+      time-to-live: 10m
+    specs:
+      time-to-lives:
+        [ "demo:cache1" ]: 10s
+        [ "demo:oss:*" ]: 10s
   redis:
     ssl: ${REDIS_SSL:false}
     host: ${REDIS_HOST:}
