Feat/workflow output (#140)
* feat: Add default thread pool

* chore: Modify log file config

* chore: Adjust the package path

* fix: Modify workflow call response

* feat: Add output nodes and optimize log collection

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -123,6 +123,8 @@ camel:
           title: "email"
         - name: "webhook"
           title: "Webhook"
+        - name: "output"
+          title: "Output Node"
     languages:
       - code:
           - "groovy"
@@ -152,6 +154,7 @@ oauth2:
     - "/user/register"
     - "/user/status"
     - "/public/**"
+    - "/actuator/**"
 
 mqtt:
   broker:
