--- a/services/dashboard/dashboard-service/pom.xml
+++ b/services/dashboard/dashboard-service/pom.xml
@@ -101,6 +101,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>resource-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>data-jpa</artifactId>
             <version>${project.version}</version>
         </dependency>
