--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>message-pub-sub-component</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- service -->
@@ -192,6 +192,12 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>resource</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>scheduler</artifactId>
             <version>${project.version}</version>
         </dependency>
 
