--- a/application/application-standard/src/main/resources/db/postgres/changelog.yaml
+++ b/application/application-standard/src/main/resources/db/postgres/changelog.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
   - includeAll:
       path: sql/v1.2.0
       relativeToChangelogFile: true
+  - include:
+      file: db/scheduler/postgres/changelog.yaml
