fix: Dashboard sorting adjustment

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -122,6 +122,8 @@ camel:
           title: "Service Invocation"
         - name: "code"
           title: "Code"
+        - name: "httpRequest"
+          title: "Http Request"
       external:
         - name: "email"
           title: "email"
