feat: schedule to clean temp resources

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -163,6 +163,7 @@ oauth2:
     - "/user/status"
     - "/public/**"
     - "/actuator/**"
+    - "/db-resource/**"
     - "/workflow-http-in/**"
 
 mqtt:
