--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>application</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
 
     <artifactId>application-standard</artifactId>
@@ -206,13 +206,13 @@
         <dependency>
             <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>msc-integration</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>milesight-gateway</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- unit test -->
