--- a/application/pom.xml
+++ b/application/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>beaver-iot</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
 
     <artifactId>application</artifactId>
