--- a/core/rule-engine/rule-engine-components/pom.xml
+++ b/core/rule-engine/rule-engine-components/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>rule-engine</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
 
     <groupId>com.milesight.beaveriot</groupId>
