--- a/extension-components/notifications/notification-websocket/pom.xml
+++ b/extension-components/notifications/notification-websocket/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>notifications</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
 
     <artifactId>notification-websocket</artifactId>
