--- a/services/credentials/credentials-service/pom.xml
+++ b/services/credentials/credentials-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>credentials</artifactId>
         <groupId>com.milesight.beaveriot</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>permission-api</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
