--- a/services/credentials/pom.xml
+++ b/services/credentials/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>services</artifactId>
         <groupId>com.milesight.beaveriot</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
