--- a/services/workflow/workflow-service/pom.xml
+++ b/services/workflow/workflow-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>workflow</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${projectVersion}</version>
     </parent>
 
     <artifactId>workflow-service</artifactId>
