--- a/core/eventbus/eventbus-api/pom.xml
+++ b/core/eventbus/eventbus-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>eventbus</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>eventbus-api</artifactId>
