--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>beaver-iot-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>./beaver-iot-parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beaver-iot</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>beaver-iot</name>
     <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
@@ -189,6 +188,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.6.0</version>
                     <executions>
                         <execution>
                             <id>add-groovy-test-source</id>
