--- a/services/entity/entity-service/pom.xml
+++ b/services/entity/entity-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>entity</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>entity-service</artifactId>
