--- a/services/permission/permission-api/pom.xml
+++ b/services/permission/permission-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>permission</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>permission-api</artifactId>
