--- a/services/resource-manager/resource-api/pom.xml
+++ b/services/resource-manager/resource-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>resource-manager</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>resource-api</artifactId>
