ci: add deploy.skip when deploy

--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -458,6 +458,9 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <skip>${deploy.skip}</skip>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
