Basic CRUD operations and API interfaces for device templates.

--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -105,6 +105,11 @@
             </dependency>
             <dependency>
                 <groupId>com.milesight.beaveriot</groupId>
+                <artifactId>device-template-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.milesight.beaveriot</groupId>
                 <artifactId>entity-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
