--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -121,6 +121,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-template-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>integration</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -212,6 +217,12 @@
         <dependency>
             <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>milesight-gateway</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot.integrations</groupId>
+            <artifactId>mqtt-device</artifactId>
             <version>${project.version}</version>
         </dependency>
 
