--- a/services/device-template/pom.xml
+++ b/services/device-template/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
-        <artifactId>beaver-iot</artifactId>
+        <artifactId>services</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>services</artifactId>
+    <artifactId>device-template</artifactId>
     <packaging>pom</packaging>
-    <name>services</name>
+    <name>device-template</name>
     <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
     <url>https://github.com/milesight-iot/beaver-iot</url>
     <scm>
@@ -23,9 +23,9 @@
     </organization>
     <developers>
         <developer>
-            <id>Simon</id>
-            <name>Simon Zhao</name>
-            <email>simon.zhao@milesight.com</email>
+            <id>luxb</id>
+            <name>luxb</name>
+            <email>luxb@milesight.com</email>
         </developer>
     </developers>
     <licenses>
@@ -36,18 +36,8 @@
     </licenses>
 
     <modules>
-        <module>dashboard</module>
-        <module>user</module>
-        <module>device</module>
-        <module>authentication</module>
-        <module>integration</module>
-        <module>entity</module>
-        <module>workflow</module>
-        <module>permission</module>
-        <module>credentials</module>
-        <module>mqtt</module>
-        <module>resource-manager</module>
-        <module>device-template</module>
+        <module>device-template-api</module>
+        <module>device-template-service</module>
     </modules>
 
     <properties>
