--- a/services/device-template/pom.xml
+++ b/services/device-template/pom.xml
@@ -44,6 +44,15 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <json-schema-validator.version>1.0.47</json-schema-validator.version>
     </properties>
 
+    <dependencies>
+        <!-- JSON Schema Validator -->
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${json-schema-validator.version}</version>
+        </dependency>
+    </dependencies>
 </project>
