--- a/services/device-template/device-template-service/pom.xml
+++ b/services/device-template/device-template-service/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
