--- a/application/application-standard/src/main/resources/db/postgres/changelog.yaml
+++ b/application/application-standard/src/main/resources/db/postgres/changelog.yaml
@@ -11,3 +11,6 @@ databaseChangeLog:
       relativeToChangelogFile: true
   - include:
       file: db/scheduler/postgres/changelog.yaml
+  - includeAll:
+      path: sql/v1.2.1
+      relativeToChangelogFile: true
