feat: add overall validation

--- a/services/entity/entity-api/pom.xml
+++ b/services/entity/entity-api/pom.xml
@@ -45,6 +45,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
