--- a/services/entity/entity-service/pom.xml
+++ b/services/entity/entity-service/pom.xml
@@ -101,6 +101,10 @@
             <version>6.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
 
         <!--  Testing  -->
         <dependency>
