--- a/services/user/user-service/pom.xml
+++ b/services/user/user-service/pom.xml
@@ -114,6 +114,10 @@
             <artifactId>data-jpa</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
