--- a/services/dashboard/dashboard-service/pom.xml
+++ b/services/dashboard/dashboard-service/pom.xml
@@ -76,7 +76,7 @@
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>notification-websocket</artifactId>
+            <artifactId>entity-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
