feat: add device template (#207)
* Basic CRUD operations and API interfaces for device templates.

* fix function getAddDeviceTemplateId return Long type

* Add template_id to device when creating.

* Add: validate device template and get default device template content

* Add:
1. Automatic discover device, build device entities and set values to device entity values;
2. Test upload test data via current device template.

* Rename device_template sql file name

* Add api functions of DeviceTemplateServiceProvider

* Change name in device.sql of device_v1.2.0_20250514_083900 changelog

* Remove: Code related to device template aware

* Add: Device count in device template response data

* Modify: return entities data when calling test with device template

* Remove: Unnecessary response model

* 1. Used index uk_device_template_key_tenant_id instead
2. Removed templateType
3. Removed some unused codes

* Modify: Change foreign key of device from templateId to templateKey

* Modify the 'discover' API to return Device and ExchangePayload without saving.

* Add @Tenant to DeviceTemplateRepository

* Modify: Discover with device template id

* Modify: Change type of id in DeviceTemplateResponseData from Long to String
Fix: Update template key when saving devices

* 1. Remove default integration mqtt-device
2. Add new api output in DeviceTemplateParserProvider

* Modify:
1. Change api name, parameters and return type of DeviceTemplateParserProvider
2. Change output of device template from array to single object

* Modify: Enhance the validation of the output

---------

Co-authored-by: luxb <luxb@mile-star.com>

--- a/services/device/device-service/pom.xml
+++ b/services/device/device-service/pom.xml
@@ -62,6 +62,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-template-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>user-api</artifactId>
             <version>${project.version}</version>
         </dependency>
